--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "jira_report_generator"
-version = "1.0.4"
+version = "1.1"
 authors = [
   { name="Denis Maitak", email="denis.maitak@gmail.com" },
 ]
@@ -21,6 +21,7 @@ dependencies = [
     "pandas==2.0.2",
     "python-decouple==3.8",
     "jinja2==3.1.2",
+    "numpy==1.24.3",
 ]
 
 [project.scripts]
