--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "jira_report_generator"
-version = "1.2.1"
+version = "1.2.2"
 authors = [
   { name="Denis Maitak", email="denis.maitak@saritasa.com" },
 ]
@@ -25,11 +25,11 @@ dependencies = [
 ]
 
 [project.scripts]
-jira-report-generator = "jira_report_generator.app:main"
+jira-report-generator = "jira_report_generator.cli:main"
 
 [project.urls]
-"Homepage" = "https://github.com/denismaitak/jira-report-generator"
-"Bug Tracker" = "https://github.com/denismaitak/jira-report-generator/issues"
+"Homepage" = "https://github.com/saritasa-nest/saritasa-python-jira-report-generator"
+"Bug Tracker" = "https://github.com/saritasa-nest/saritasa-python-jira-report-generator/issues"
 
 [tool.setuptools.package-data]
 "jira_report_generator.static" = ["*.js", "*.css", "*.html"]
